--- a/.github/workflows/contentful-type-sync-test.yaml
+++ b/.github/workflows/contentful-type-sync-test.yaml
@@ -22,6 +22,10 @@ jobs:
           echo "Server is running..."
           sleep 5  # Give the server some time to start
 
+      - name: Send test POST request
+        run: |
+          curl -X POST http://localhost:8000 -H "Content-Type: application/json" -d '{"test": "data"}'
+
       - name: Run Contentful Type Sync
         run: |
           echo "Running Contentful Type Sync..."
