--- a/.github/workflows/contentful-type-sync-test.yaml
+++ b/.github/workflows/contentful-type-sync-test.yaml
@@ -30,7 +30,8 @@ jobs:
 
       - name: Send repository_dispatch payload to server
         run: |
-          curl -X POST http://localhost:8000 -H "Content-Type: application/json" -d '${{ toJson(github.event.client_payload) }}'
+          payload=$(echo '${{ toJson(github.event.client_payload) }}' | jq -c .)
+          curl -X POST http://localhost:8000 -H "Content-Type: application/json" -d "$payload"
 
       - name: Display server logs
         run: cat server.log
