--- a/.github/workflows/contentful-type-sync-test.yaml
+++ b/.github/workflows/contentful-type-sync-test.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Send repository_dispatch payload to server
         run: |
-          payload=$(echo '${{ toJson(github.event.client_payload) }}' | jq -c .)
+          payload=$(printf '%s' '${{ toJson(github.event.client_payload) }}')
           echo "Sending payload: $payload"
           curl -X POST http://localhost:8000 -H "Content-Type: application/json" -d "$payload"
 
