--- a/.github/workflows/contentful-type-sync-test.yaml
+++ b/.github/workflows/contentful-type-sync-test.yaml
@@ -9,21 +9,21 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v2
         with:
           node-version: "14"
 
       - name: Restore cache
         id: cache-contentful
-        uses: actions/cache@v4
+        uses: actions/cache@v2
         with:
           path: cache.json
-          key: Contentful-cache
+          key: Contentful-cache-${{ github.run_id }}
           restore-keys: |
-            Contentful-cache
+            Contentful-cache-
 
       - name: Log cache contents if exists
         run: |
@@ -49,12 +49,8 @@ jobs:
       - name: Display server logs
         run: cat server.log
 
-      - name: Delete existing cache
-        run: |
-          rm -f cache.json
-
       - name: Save cache
         uses: actions/cache@v2
         with:
           path: cache.json
-          key: Contentful-cache
+          key: Contentful-cache-${{ github.run_id }}
