--- a/.github/workflows/contentful-type-sync-test.yaml
+++ b/.github/workflows/contentful-type-sync-test.yaml
@@ -16,6 +16,9 @@ jobs:
         with:
           node-version: "14"
 
+      - name: Install dependencies
+        run: npm install axios
+
       - name: Restore cache
         id: cache-contentful
         uses: actions/cache@v4
