change action to match the ci.yml of MMS

--- a/.github/workflows/do-not-merge-yet.yaml
+++ b/.github/workflows/do-not-merge-yet.yaml
@@ -1,17 +1,26 @@
 name: Do Not Merge Yet
 
 on:
+  workflow_call:
   pull_request:
-    types: [synchronize, opened, reopened, labeled, unlabeled]
+    types: [opened, synchronize, reopened, labeled, unlabeled] # Added label events
+    paths-ignore:
+      - "docs/**"
+      - "documentation/**"
+      - "**.md"
+      - "**/documentation/**"
+      - "CNAME*"
 
-jobs:
-  do-not-merge:
-    if: ${{ contains(github.event.*.labels.*.name, 'Do Not Merge Yet') }}
-    name: Prevent Merging
+  # New label check job first
+  CheckDisallowedLabels:
     runs-on: ubuntu-latest
+    # Only run for label events with specific labels
+    if: |
+      github.event.action == 'labeled' || github.event.action == 'unlabeled'
+      && (contains(github.event.pull_request.labels.*.name, 'Do Not Merge Yet')
+      || contains(github.event.pull_request.labels.*.name, 'in-progress')
     steps:
-      - name: Check for label
-        run: |
-          echo "Pull request is labeled as 'do not merge'"
-          echo "This workflow fails so that the pull request cannot be merged"
+      - run: |
+          echo "::error::PR has 'Do Not Merge Yet' or 'in-progress' label"
+          echo "Please remove the label before merging"
           exit 1
